--- a/slack/package.json
+++ b/slack/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@slack/client": "^3.6.1",
     "web3": "^0.17.0-beta",
-    "nodemailer": "^2.0"
+    "nodemailer": "^2.0",
+    "json-rpc2": "^1.0.2" 
   }
 }
